--- a/site/styles/screen.css
+++ b/site/styles/screen.css
@@ -44,6 +44,9 @@ body {
   display: flex;
   font-family: 'Lato', sans-serif; }
 
+input, textarea {
+  font-family: 'Lato', sans-serif; }
+
 header, section {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -88,7 +91,8 @@ nav, .one, .two, .three, .four, .five, .six, .row, .portfolio-row, .portfolio-co
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
-          justify-content: center; }
+          justify-content: center;
+  text-align: center; }
 
 .two {
   height: 60vh; }
@@ -130,6 +134,10 @@ a {
     padding: 4.4375rem 0; }
   .one p {
     min-width: 80vw; } }
+
+@media screen and (max-width: 830px) {
+  .one p, .col p, .portfolio-row .portfolio-col {
+    min-width: 85vw; } }
 
 .row {
   width: 80vw; }
@@ -326,13 +334,16 @@ header h3 {
   background: url('../../site/images/Layer-20.png'); }
 
 @media screen and (max-width: 1366px) {
+  .four {
+    height: auto; }
   .portfolio-row {
     height: auto; }
   .portfolio-row .portfolio-col {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
-            flex-grow: 1; }
+            flex-grow: 1;
+    margin-right: 0; }
   .portfolio-col a {
     bottom: 0;
     height: 30%;
@@ -345,7 +356,6 @@ header h3 {
 @media screen and (max-width: 960px) {
   .four {
     display: block;
-    height: auto;
     text-align: center; }
   .portfolio-row {
     -webkit-box-orient: vertical;
